--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve 3020",
+    "start": "ng serve --port 3020",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
